fix html overflow: hidden, clip

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,8 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: clip;
+  overflow-x: hidden;
 }
 
 body {
